test/classes/errors/nilability-assign/assign-nonnil-unmanaged-from-oknil-unmanaged.good
assign-nonnil-unmanaged-from-oknil-unmanaged.chpl:8: error: Cannot assign to unmanaged MyClass from unmanaged MyClass?
assign-nonnil-unmanaged-from-oknil-unmanaged.chpl:10: error: done
